[package]
name = "esb-ng"
version = "0.1.0"
edition = "2024"
description = "Implementation of Nordic's Enhanced ShockBurst communication protocol"
readme = "README.md"
repository = "https://github.com/nazo6/esb"
license = "MIT OR Apache-2.0"
keywords = ["arm", "communication", "cortex-m", "nrf", "radio"]
categories = ["embedded", "no-std"]

[package.metadata.docs.rs]
features = ["nrf52840"]
default-target = "x86_64-unknown-linux-gnu"

[dependencies]
bbqueue = { version = "0.6.0" }
cortex-m = "0.7.7"
nrf-pac = { version = "0.2.0" }

[features]
_check = ["nrf52840"]
fast-ru = []
nrf52840 = ["nrf-pac/nrf52840"]
